monitoring/victoria-metrics/2.service-clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: victoria
  namespace: monitoring
  labels:
    app: victoria
spec:
  sessionAffinity: ClientIP
  selector:
    app: victoria
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 8428
      targetPort: 8428
