monitoring/victoria-metrics/2.service-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victoria
  namespace: monitoring
  labels:
    app: victoria
spec:
  ingressClassName: nginx
  rules:
  - host: vms.github.icu
    http:
      paths:
      - backend:
          service:
            name: victoria
            port:
              number: 8428
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - vms.github.icu
    secretName: github-tls
